--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" version="2.5"
           xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
-    <display-name>Hello Struts 1.2 Example</display-name>
+    <display-name>webUnB2_copy</display-name>
 
     <servlet>
         <servlet-name>action</servlet-name>
@@ -19,10 +19,6 @@
         <servlet-name>action</servlet-name>
         <url-pattern>*.do</url-pattern>
     </servlet-mapping>
-
-    <welcome-file-list>
-        <welcome-file>hello.jsp</welcome-file>
-    </welcome-file-list>
     <servlet>
         <servlet-name>ExemploServlet</servlet-name>
         <servlet-class>com.example.ExemploServlet</servlet-class>
