--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -1,14 +1,28 @@
 # Exemplo de mensagens para o aplicativo
 # Você pode adicionar mensagens conforme necessário
 
-# Mensagens de erro do formulário de cadastro de alunos
-error.nome.required = O nome é obrigatório.
+# Mensagens de erro do formulário de cadastro de alunos e disciplina
+error.nome.required = É necessário informar o nome.
 error.matricula.required = A matrícula é obrigatória.
+error.local.required = O local é obrigatória.
+error.turma.required = O local é obrigatória.
+error.curso.required = O local é obrigatória.
 
 # Mensagens de sucesso do formulário de cadastro de alunos
 success.aluno.salvo = Aluno salvo com sucesso.
 success.aluno.atualizado = Aluno atualizado com sucesso.
 success.aluno.excluido = Aluno excluído com sucesso.
 
+# Mensagens de sucesso do formulário de cadastro da disciplina
+success.disciplina.salvo = Disciplina salva com sucesso.
+success.disciplina.atualizado = Disciplina atualizada com sucesso.
+success.disciplina.excluido = Disciplina excluída com sucesso.
+
+
 # Mensagem de confirmação para exclusão do aluno
 confirm.exclusao.aluno = Tem certeza que deseja excluir esse aluno?
+
+# Mensagem de confirmação para exclusão do aluno
+confirm.exclusao.disciplina = Tem certeza que deseja excluir essa disciplina?
+
+mensage.teste=Minha mensagem de teste
