--- a/.classpath
+++ b/.classpath
@@ -4,14 +4,22 @@
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 5.1 Runtime 1.7 20230721"/>
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss 5.1 Runtime">
+		<attributes>
+			<attribute name="owner.project.facets" value="#system#;jst.web"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="lib" path="C:/projeto_java/curso java/SERVIDOR/jboss-5.1.0.GA/common/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="C:/projeto_java/curso java/SERVIDOR/jboss-5.1.0.GA/common/lib/hibernate-core.jar"/>
 	<classpathentry kind="lib" path="C:/projeto_java/curso java/SERVIDOR/jboss-5.1.0.GA/lib/dom4j.jar"/>
 	<classpathentry kind="lib" path="C:/projeto_java/curso java/SERVIDOR/jboss-5.1.0.GA/client/ejb3-persistence.jar"/>
 	<classpathentry kind="lib" path="C:/projeto_java/curso java/SERVIDOR/jboss-5.1.0.GA/client/hibernate-annotations.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files (x86)/H2/bin/h2-2.1.214.jar"/>
-	<classpathentry kind="lib" path="C:/Program Files/PostgreSQL/postgresql-42.6.0.jar"/>
+	<classpathentry kind="lib" path="C:/ProjetoJavaWildfly/commons-collections4-4.4/commons-collections4-4.4.jar"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/H2/bin/h2-2.2.220.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.7.0_80">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
