Inclusao do aluno.do e disciplina.do

--- a/src/main/resources/ApplicationResources.properties
+++ b/src/main/resources/ApplicationResources.properties
@@ -1,12 +1,15 @@
 # Exemplo de mensagens para o aplicativo
 # Você pode adicionar mensagens conforme necessário
 
-# Mensagens de erro do formulário de cadastro de alunos e disciplina
-error.nome.required = É necessário informar o nome.
+# Mensagens de erro do formulário de cadastro
+error.nome.required = O nome é obrigatório.
 error.matricula.required = A matrícula é obrigatória.
-error.local.required = O local é obrigatória.
-error.turma.required = O local é obrigatória.
-error.curso.required = O local é obrigatória.
+error.local.required = O local é obrigatório.
+error.turma.required = A turma é obrigatória.
+error.curso.required = O curso é obrigatório.
+error.endereco.required = O endereço é obrigatória.
+error.idade.required = A idade é obrigatória.
+error.telefone.required = O telefone é obrigatório.
 
 # Mensagens de sucesso do formulário de cadastro de alunos
 success.aluno.salvo = Aluno salvo com sucesso.
@@ -18,6 +21,10 @@ success.disciplina.salvo = Disciplina salva com sucesso.
 success.disciplina.atualizado = Disciplina atualizada com sucesso.
 success.disciplina.excluido = Disciplina excluída com sucesso.
 
+# Mensagens de sucesso do formulário de cadastro da disciplina
+success.professor.salvo = Professor salva com sucesso.
+success.professor.atualizado = Professor atualizada com sucesso.
+success.professor.excluido = Professor excluída com sucesso.
 
 # Mensagem de confirmação para exclusão do aluno
 confirm.exclusao.aluno = Tem certeza que deseja excluir esse aluno?
@@ -25,4 +32,5 @@ confirm.exclusao.aluno = Tem certeza que deseja excluir esse aluno?
 # Mensagem de confirmação para exclusão do aluno
 confirm.exclusao.disciplina = Tem certeza que deseja excluir essa disciplina?
 
-mensage.teste=Minha mensagem de teste
+# Mensagem de confirmação para exclusão do aluno
+confirm.exclusao.professor = Tem certeza que deseja excluir essa professor?
